# health

./: .dockerignore  .drone.yml  .env.example  .gitignore  .woodpecker.yml  CONTEXT.md  Caddyfile  Caddyfile.container  Dockerfile  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  manifest
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_principles_kb.py  a26a598bb610_initial_schema.py  a7b8c9d0e1f2_add_excluded_to_user_exercise_prefs.py  a7d3f9b2c1e4_drop_user_credentials_webauthn.py  b2c3d4e5f6a7_add_programs.py  b3f7a1c2d4e5_replace_password_with_webauthn.py  b8c2d4e6f0a1_reconcile_users_to_authentik.py  b8c9d0e1f2a3_add_web_push_tables.py  c3d4e5f6a7b8_add_nutrition_food_diary.py  c4d8e2f6a1b3_add_workout_dedup_constraint.py  c9d0e1f2a3b4_add_prescriptions_and_program_revisions.py  c9d3e5f7a2b4_add_exercise_library.py  d0e1f2a3b4c9_add_analysis_reports_and_proposals.py  d4e5f6a7b8c9_add_recipes.py  d4f6a8c0e2b5_add_training_sessions_and_sets.py  d5e9f3a7b2c4_add_workout_route_point_workout_id_idx.py  e1f2a3b4c9d0_add_ingest_tokens.py  e5f6a7b8c9d0_add_connections.py  e6f0a4b8c3d5_add_batch_id_indexes.py  (+5 more)
backend/app/: config.py  database.py  main.py
backend/app/api/: activity.py  (+21 more)
backend/tests/: conftest.py  test_activity.py  test_adherence.py  test_adjust.py  test_adjust_agent.py  test_adjust_api.py  test_analysis.py  test_analytics_api.py  test_auth.py  test_autoregulation.py  test_autoregulation_api.py  test_block_review.py  test_budget.py  test_budget_api.py  test_connection_query.py  test_connection_sync_cli.py  test_connections_api.py  test_connectors.py  test_crypto.py  test_dashboard.py  test_day_override_api.py  test_duration.py  test_e1rm.py  test_effort.py  test_exercises_api.py  test_export_api.py  test_export_archive.py  test_fitbod_api.py  test_fitbod_import.py  test_fitbod_parser.py  test_gym_profile_api.py  test_health.py  test_identity.py  test_ingest_api.py  test_ingestion.py  test_matcher.py  test_metrics.py  test_metrics_helpers.py  test_muscle_volume.py  test_nutrition.py  (+39 more)
(+314 files in other folders)
