[project]
name = "apple-health-data-backend"
version = "0.1.0"
description = "Apple Health Data Visualization - FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic-settings>=2.6,<3",
    "python-multipart>=0.0.12,<1",
    "lxml>=5.3,<6",
    "aiofiles>=24.1,<25",
    # Symmetric authenticated encryption (Fernet) for per-user Connection
    # credentials stored encrypted at rest (BYOT integrations — connections).
    "cryptography>=44,<46",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    # Sync driver for migration tests, which drive the reconciliation over a
    # sync Connection (as Alembic does via Connection.run_sync). Tests only.
    "psycopg2-binary>=2.9,<3",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
